--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -1,5 +1,16 @@
+@font-face
+  font-family: Quark
+  src: url('/fonts/Quark-LightBold/Quark-Light.otf') format("truetype")
+div
+  font-family: Quark , verdana, helvetica, sans-serif
+nav
+  .brand-logo.brand-ada
+    position: static !important
+.row.main-page
+  .col
+    padding: 0
 .slider
-  height: 20em !important
+  height: 38.3em !important
   margin-bottom: 1em
 .slides
-  height: 16em !important
+  height: 34em !important
