--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -15,9 +15,6 @@ nav
   .col.tumbnail-items
     padding-left: 1em
     padding-right: 1em
-.slider
-  height: 38.3em !important
-  margin-bottom: 1em
 .slides
   height: 34em !important
 .row
@@ -38,10 +35,78 @@ nav
       i
         padding-top: 0.3em
     .card-title
-      line-height: 42px
+      line-height: 47px
     .btn-floating
       -webkit-box-shadow: 0px 0px 2px 0px rgba(189,187,189,1)
       -moz-box-shadow: 0px 0px 2px 0px rgba(189,187,189,1)
       box-shadow: 0px 0px 2px 0px rgba(189,187,189,1)
 .divider
   margin-bottom: 0.4em
+
+$breakpoint-tablet: 992px
+$breakpoint-mobile: 750px
+$breakpoint-labtop: 1366px
+$breakpoint-desktop: 1680px
+
+
+/////Labtop Display/////
+@media only screen and (min-width: $breakpoint-mobile) and (max-width: $breakpoint-labtop)
+  /////Login Page/////
+  .style-form-login
+    display: flex
+    align-items: center
+    flex-flow: column
+    height: 80%
+    border-radius: 2px
+    background-color: rgba(250,250,250,0.8)
+  .btn-floating.btn-large.style-signup-button
+    margin-right: -4.3em
+    margin-bottom: -4.5em
+    width: 6em
+    height: 6em
+
+  /////Main Page/////
+  .slider
+    height: 38.3em !important
+    margin-bottom: 1em
+  .radius-img
+    -webkit-border-bottom-right-radius: 100px
+    -webkit-border-bottom-left-radius: 100px
+    -moz-border-radius-bottomright: 100px
+    -moz-border-radius-bottomleft: 100px
+    border-bottom-right-radius: 100px
+    border-bottom-left-radius: 100px
+  .list-img-slide
+    width: 21.45em !important
+    height: 35em !important
+
+/////Desktop Display/////
+@media only screen and (min-width: $breakpoint-labtop) and (max-width: $breakpoint-desktop)
+  /////Login Page/////
+  .style-form-login
+    display: flex
+    align-items: center
+    flex-flow: column
+    height: 70%
+    border-radius: 2px
+    background-color: rgba(250,250,250,0.8)
+  .btn-floating.btn-large.style-signup-button
+    margin-right: -3.5em
+    margin-top: 6em
+    width: 6em
+    height: 6em
+
+  /////Main Page/////
+  .slider
+    height: 46.3em !important
+    margin-bottom: 1em
+  .radius-img
+    -webkit-border-bottom-right-radius: 90px
+    -webkit-border-bottom-left-radius: 90px
+    -moz-border-radius-bottomright: 90px
+    -moz-border-radius-bottomleft: 90px
+    border-bottom-right-radius: 90px
+    border-bottom-left-radius: 90px
+  .list-img-slide
+    width: 26.8em !important
+    height: 42em !important
