--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -43,6 +43,24 @@ nav
 .divider
   margin-bottom: 0.4em
 
+/////Scroll Bar/////
+#style-1::-webkit-scrollbar-track
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)
+	border-radius: 200px
+	background-color: #F5F5F5
+
+#style-1::-webkit-scrollbar
+	width: 3px
+	background-color: #F5F5F5
+  border-radius: 200px
+
+#style-1::-webkit-scrollbar-thumb
+	border-radius: 200px
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3)
+	background-color: #7CB6DD
+
+/////Responsive/////
+
 $breakpoint-tablet: 992px
 $breakpoint-mobile: 750px
 $breakpoint-labtop: 1366px
