--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -142,7 +142,8 @@ $breakpoint-desktop: 1680px
   .list-img-slide
     width: 26.8em !important
     height: 42em !important
-
+  .card-mobile
+    height: 240px
 /////mobile/////
 @media only screen and (min-width: $breakpoint-mobile-mini) and (max-width: $breakpoint-mobile-large)
   /////Login Page/////
