--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -159,7 +159,7 @@ $breakpoint-desktop: 1680px
     display: flex
     align-items: center
     flex-flow: column
-    height: 82em !important
+    height: 86em !important
     width: 100% !important
     border-radius: 2px
     background-color: rgba(250,250,250,0.8)
@@ -177,6 +177,10 @@ $breakpoint-desktop: 1680px
       font-size: 40px
       margin-top: 1.5em
     #usernameSignup
+      font-size: 40px
+      line-height: 0px
+      margin-top: 1.5em
+    #email
       font-size: 40px
       line-height: 0px
       margin-top: 1.5em
