--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -11,6 +11,10 @@ nav
 nav
   .brand-logo.brand-admin
     position: static !important
+.row.login-page
+  margin-bottom: 0px !important
+.row.signup-page
+  margin-bottom: 0px !important
 .row.main-page
   .col
     padding: 0
@@ -59,6 +63,7 @@ nav
   li
     height: 100% !important
   a
+    text-transform: none !important
     font-size: 20px
     font-weight: bold
     line-height: 3.5em
@@ -66,7 +71,19 @@ nav
     height: 100% !important
   .indicator
     background-color: #F44336 !important
-
+.dropdown-content.avatar
+  top: 4.29em !important
+  background-color: #212121
+  hr
+    border-color: #333
+    box-shadow: inset 0 0 10px #000000
+    margin-bottom: 0
+  li
+    a
+      color: #fff
+      font-weight: bold
+  li:hover
+    background: rgba(0,0,0,0.2)
 
 /////Scroll Bar/////
 #style-1::-webkit-scrollbar-track
@@ -85,6 +102,19 @@ nav
 	background-color: #7CB6DD
 
 /////Admin Site/////
+.dropdown-content.avatar-admin
+  top: 4.29em !important
+  background-color: #212121
+  hr
+    border-color: #333
+    box-shadow: inset 0 0 10px #000000
+    margin-bottom: 0
+  li
+    a
+      color: #fff
+      font-weight: bold
+  li:hover
+    background: rgba(0,0,0,0.2)
 .row.admin-site
   .col
     padding: 0
@@ -99,14 +129,16 @@ nav
     text-align: center
     cursor: pointer
     color: #fff
-    font-size: 25px
+    font-size: 20px
     font-weight: bold
     padding-top: 1em
     padding-bottom: 1em
 .tab-menu-admin
   overflow-x: hidden
-
-
+.menu-item-admin-group
+  .divider
+    background-color: #68748d
+    margin-bottom: 0
 /////Responsive/////
 
 $breakpoint-tablet: 992px
@@ -123,7 +155,14 @@ $breakpoint-desktop: 1680px
     display: flex
     align-items: center
     flex-flow: column
-    height: 80%
+    height: 35em
+    border-radius: 2px
+    background-color: rgba(250,250,250,0.8)
+  .style-form-signup
+    display: flex
+    align-items: center
+    flex-flow: column
+    height: 42em !important
     border-radius: 2px
     background-color: rgba(250,250,250,0.8)
   .btn-floating.btn-large.style-signup-button
@@ -154,7 +193,14 @@ $breakpoint-desktop: 1680px
     display: flex
     align-items: center
     flex-flow: column
-    height: 70%
+    height: 36em
+    border-radius: 2px
+    background-color: rgba(250,250,250,0.8)
+  .style-form-signup
+    display: flex
+    align-items: center
+    flex-flow: column
+    height: 44em !important
     border-radius: 2px
     background-color: rgba(250,250,250,0.8)
   .btn-floating.btn-large.style-signup-button
