--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -166,8 +166,8 @@ $breakpoint-desktop: 1680px
     border-radius: 2px
     background-color: rgba(250,250,250,0.8)
   .btn-floating.btn-large.style-signup-button
-    margin-right: -4.3em
-    margin-bottom: -4.5em
+    right: -4em
+    top: 2em
     width: 6em
     height: 6em
 
@@ -187,7 +187,7 @@ $breakpoint-desktop: 1680px
     height: 35em !important
 
 /////Desktop Display/////
-@media only screen and (min-width: $breakpoint-labtop) and (max-width: $breakpoint-desktop)
+@media only screen and (min-width: 1367px) and (max-width: $breakpoint-desktop)
   /////Login Page/////
   .style-form-login
     display: flex
