--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -183,7 +183,7 @@ $breakpoint-desktop: 1680px
     border-bottom-right-radius: 100px
     border-bottom-left-radius: 100px
   .list-img-slide
-    width: 21.45em !important
+    width: 100% !important
     height: 35em !important
 
 /////Desktop Display/////
