--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -26,7 +26,7 @@ nav
     padding-right: 1em
 .slides
   height: 78% !important
-  background-color: #fff
+  background-color: #fff !important
 .row
   .col.videos-detail
     padding: 0.6rem 0.3rem
