Create donate button

--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -58,16 +58,30 @@ nav
   margin-bottom: 0.4em
 
 .annountment-container
-  img
+  img.topic-logo
     width: auto
-    height: 8em
+    height: 4em
   .row.bank-account
     margin-bottom: 0
-.donate-btn
+  img.bank-logo
+    width: auto !important
+    height: 8em !important
+  .topic
+    display: flex
+    justify-content: center
+    word-wrap: break-word
+    margin-top: 1em
+    span
+      width: 80%
+.donate-form
   display: flex
   justify-content: center
   a
     font-weight: bold
+  form
+    width: 60%
+  button
+    float: right
 /////Navigator/////
 
 .menu-nav
