--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -82,6 +82,31 @@ nav
     width: 60%
   button
     float: right
+textarea.materialize-textarea:focus
+  border-bottom: 1px solid #43609C !important
+textarea.materialize-textarea:focus + label
+  color: #43609C !important
+input[type=text]:focus
+  border-bottom: 1px solid #43609C !important
+input[type=text]:focus + label
+  color: #43609C !important
+input[type=password]:focus
+  border-bottom: 1px solid #43609C !important
+input[type=password]:focus + label
+  color: #43609C !important
+input[type=email]:focus
+  border-bottom: 1px solid #43609C !important
+input[type=email]:focus + label
+  color: #43609C !important
+li
+  span
+    color: #43609C !important
+li.disabled
+  span
+    color: #9e9e9e !important
+label.term-condition::before
+  border-right: 2px solid #43609C !important
+  border-bottom: 2px solid #43609C !important
 /////Navigator/////
 
 .menu-nav
