Responsive bank account page

--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -107,6 +107,9 @@ li.disabled
 label.term-condition::before
   border-right: 2px solid #43609C !important
   border-bottom: 2px solid #43609C !important
+.text-bank-account
+  h5
+    font-size: 21px
 /////Navigator/////
 
 .menu-nav
@@ -510,6 +513,12 @@ $breakpoint-desktop: 1680px
       width: 6em
       height: 6em
       margin-top: 0.5em
+  .donate-form
+    button
+      height: 2em
+      width: 100%
+      font-size: 30px
+      font-weight: bold
   /////Player Page/////
   .player-page
     margin-top: 10.5em !important
@@ -529,7 +538,8 @@ $breakpoint-desktop: 1680px
   .text-relates-item
     font-size: 35px
   .text-bank-account
-    font-size: 35px
+    h5
+      font-size: 32px
   /////Admin Site/////
   nav
     .brand-logo.brand-admin
@@ -805,6 +815,12 @@ $breakpoint-desktop: 1680px
       width: 6em
       height: 6em
       margin-top: 0.5em
+  .donate-form
+    button
+      height: 2em
+      width: 100%
+      font-size: 30px
+      font-weight: bold
   /////Player Page/////
   .player-page
     margin-top: 10.5em !important
@@ -824,7 +840,8 @@ $breakpoint-desktop: 1680px
   .text-relates-item
     font-size: 35px
   .text-bank-account
-    font-size: 35px
+    h5
+      font-size: 32px
   /////Admin Site/////
   nav
     .brand-logo.brand-admin
