Fix tabmenu admin

--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -519,6 +519,12 @@ $breakpoint-desktop: 1680px
       width: 100%
       font-size: 30px
       font-weight: bold
+    li
+      span
+        font-size: 33px !important
+  .text-bank-account
+    h5
+      font-size: 16px !important
   /////Player Page/////
   .player-page
     margin-top: 10.5em !important
@@ -821,6 +827,12 @@ $breakpoint-desktop: 1680px
       width: 100%
       font-size: 30px
       font-weight: bold
+    li
+      span
+        font-size: 33px !important
+  .text-bank-account
+    h5
+      font-size: 16px !important
   /////Player Page/////
   .player-page
     margin-top: 10.5em !important
