--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -2,7 +2,7 @@
   font-family: Quark
   src: url('/fonts/Quark-LightBold/Quark-Light.otf') format("truetype")
 html
-  background: #F1F1F1
+  background: #fefded
 div
   font-family: Quark , verdana, helvetica, sans-serif
 nav
@@ -556,18 +556,18 @@ $breakpoint-desktop: 1680px
         width: 13rem !important
         height: auto !important
   .admin-site
-    background: #F1F1F1
+    background: #fefded
   .left-menu-admin
     height: auto !important
     margin-top: 1rem !important
     margin-bottom: 1rem !important
-    background: #F1F1F1 !important
+    background: #fefded !important
     box-shadow: none !important
     .row
       height: 2.8rem
       margin-top: 0.1rem
       width: 95%
-      background: #F1F1F1
+      background: #fefded
   .menu-admin
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !important
     border-radius: 1rem !important
@@ -864,18 +864,18 @@ $breakpoint-desktop: 1680px
         width: 13rem !important
         height: auto !important
   .admin-site
-    background: #F1F1F1
+    background: #fefded
   .left-menu-admin
     height: auto !important
     margin-top: 1rem !important
     margin-bottom: 1rem !important
-    background: #F1F1F1 !important
+    background: #fefded !important
     box-shadow: none !important
     .row
       height: 2.8rem
       margin-top: 0.1rem
       width: 95%
-      background: #F1F1F1
+      background: #fefded
   .menu-admin
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !important
     border-radius: 1rem !important
